[package]
name = "gcode-serial"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Lukas-Heiligenbrunner/gcode-serial.rs.git"
license = "MIT"
description = "A Rust lib to send Gcode via UART to 3D printers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = {version = "4.2.0", default-features = false}
event-listener = "2.5.2"
regex = "1.8.1"
lazy_static = "1.4.0"
log = "0.4.17"
tokio = { version = "1", features = ["rt", "sync", "time"] }
serde = {version = "1.0.163", features = ["derive"]}
anyhow = "1.0.71"
strum = { version = "0.24.1", features = ["derive"] }